--- a/casestudy.html
+++ b/casestudy.html
@@ -7,6 +7,8 @@
         canvas {
             border: 3px solid #d3d3d3;
             background-color: #f1f1f1;
+            display: block;
+            margin: 0 auto;
         }
     </style>
 </head>
